# Falcon-Language

./: Falcon_Whitepaper.md  LICENSE  README.md  benchmarks.fcn  falcon-syntax.json  falcon.grammar  falcon_engine.py  fpm.py  fsl.fcn  gen_docs.py  index.html  pyproject.toml  setup.py  tests.py
examples/: 01_hello.fcn  03_ai_secure_io.fcn
examples/examples/: 02_math_logic.fcn
games/: number-guessing-game.fcn
tools/: network_scanner.fcn
