[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falcon-lang-sayan"  # 'falcon-lang' নামটা হয়তো অলরেডি কেউ নিয়ে নিয়েছে, তাই আপনার নাম যোগ করা নিরাপদ।
version = "4.8.0"
description = "A secure, AI-powered programming language by Sayan."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-genai",
    "requests"
]

[project.scripts]
falcon = "falcon_engine:main"
